Fixing some links, simplifying css for spacing

--- a/css/main.css
+++ b/css/main.css
@@ -27,19 +27,6 @@ a, a:visited, a:hover {
     vertical-align: middle;
 }
 
-@media (min-width: 992px) {
-    .md-vertical-align {
-        float: none;
-        display: inline-block;
-        vertical-align: middle;
-    }
-}
-
-.section-title {
-    margin-bottom: 20px;
-    text-align: center;
-}
-
 .header {
     margin-bottom: 40px;
 }
@@ -65,32 +52,6 @@ a, a:visited, a:hover {
     margin-right: 0px;
 }
 
-.info-row {
-    margin-bottom: 40px;
-}
-
-.blurb {
-    margin-bottom: 40px;
-}
-
-@media (min-width: 992px) {
-    .blurb {
-        margin-bottom: 20px;
-    }    
-}
-
-@media (min-width: 768px) and  (max-width: 840px) {
-    .blurb {
-        margin-bottom: 10px;
-    }
-}
-
-.skills {
-    font-style: italic;
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-
 .main-img-container {
     margin-bottom: 40px;
 }
@@ -102,44 +63,65 @@ a, a:visited, a:hover {
     max-height: 275px;
 }
 
-.project {
+.blurb {
+    margin-bottom: 40px;
+}
+
+@media (min-width: 768px) and  (max-width: 840px) {
+    .blurb {
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 992px) {
+    .blurb {
+        margin-bottom: 20px;
+    }    
+}
+
+.skills {
+    font-style: italic;
+    font-size: 16px;
+    margin-bottom: 40px;
+}
+
+.section {
+    margin-bottom: 40px;
+}
+
+.section:last-child {
+    margin-bottom: 0px;
+}
+
+.section-title {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.section-item {
     padding: 20px 0;
 }
 
-.project-logo-container {
+.section-item:last-child {
+    padding-bottom: 0px;
+}
+
+.section-item-logo-container {
     display: inline-block;
     vertical-align: middle;
 }
 
-.project-logo {
+.section-item-logo {
     margin: 0 auto;
     width: 100%;
     max-width: 100px;
 }
 
-.project-title {
+.section-item-title {
     text-decoration: underline;
 }
 
-.project-text {
+.section-item-text {
     display: inline-block;
     vertical-align: middle;
-}
-
-.recent-writing {
-    margin-top: 20px;
-}
-
-.blog {
-    padding: 20px 0;
-}
-
-.blog-title {
-    text-decoration: underline;
-}
-
-.blog-logo {
-    width: 100%;
-    max-width: 136px;
-    margin: 0 auto;
 }
